# malloc-bench

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel.sh  copy_inflated_tracefiles.sh  double_conversion.BUILD  folly.BUILD  palloc_icon.xcf  size_class_analysis.nb
.github/workflows/: build.yml  format.yml  test.yml
proto/: BUILD  tracefile.proto
results/: alloc_only.txt  free_no_coalesce.txt  free_with_coalesce.txt
slab_malloc/: mm.c
src/: BUILD  allocator_interface.cc  allocator_interface.h  block.cc  block.h  common.h  concurrent_id_map.cc  concurrent_id_map.h  correctness_checker.cc  correctness_checker.h  correctness_test.cc  driver.cc  fake_heap.cc  fake_heap.h  free_block.cc  free_block.h  heap_check.h  heap_factory.cc  heap_factory.h  heap_interface.cc  heap_interface.h  libc_override.cc  local_id_map.cc  local_id_map.h  main.cc  malloc_runner.cc  malloc_runner.h  metadata.h  mmap_heap.cc  mmap_heap.h  mmap_heap_factory.cc  mmap_heap_factory.h  perf.cc  perfetto.cc  perfetto.h  perftest.cc  perftest.h  rng.h  sim_heap.h  singleton_heap.cc  (+13 more)
src/ckmalloc/: BUILD  allocator.cc  allocator.h  allocator_test.cc  block.cc  block.h  block_test.cc  ckmalloc.cc  ckmalloc.h  ckmalloc_test_fixture.h  common.h  fake_allocator.cc  fake_allocator.h  free_slab.h  freelist.cc  freelist.h  freelist_test.cc  global_state.cc  global_state.h  heap_iterator.h  heap_manager.h  heap_printer.cc  heap_printer.h  large_allocator.h  large_allocator_test.cc  large_allocator_test_fixture.cc  large_allocator_test_fixture.h  linked_list.cc  linked_list.h  linked_list_test.cc  local_cache.cc  local_cache.h  main_allocator.h  main_allocator_test.cc  main_allocator_test_fixture.cc  main_allocator_test_fixture.h  metadata_manager.cc  metadata_manager.h  metadata_manager_test.cc  metadata_manager_test_fixture.cc  (+43 more)
src/jsmalloc/: BUILD  allocator.h  block.cc  block.h  block_test.cc  chunky_block.h  jsmalloc.cc  jsmalloc.h  mallocator.h
src/jsmalloc/blocks/: BUILD  alignment.h  block.cc  block.h  block_test.cc  fixed_size_free_block_allocator.h  free_block.cc  free_block.h  free_block_allocator.cc  free_block_allocator.h  free_block_allocator_test.cc  free_block_test.cc  large_block.cc  large_block.h  large_block_allocator.cc  large_block_allocator.h  large_block_test.cc  sentinel_block_allocator.h  small_block.cc  small_block.h  small_block_allocator.cc  small_block_allocator.h  small_block_allocator_test.cc  small_block_test.cc
src/jsmalloc/blocks/freelists/: BUILD  learned_size_free_list.cc  learned_size_free_list.h  rbtree_free_list.cc  rbtree_free_list.h  small_size_free_list.cc  small_size_free_list.h
src/jsmalloc/collections/: BUILD  intrusive_linked_list.h  intrusive_linked_list_test.cc  intrusive_stack.h  intrusive_stack_test.cc  rbtree.cc  rbtree.h
src/jsmalloc/util/: BUILD  allocable.h  assert.h  bitset.h  bitset_test.cc  file_logger.cc  file_logger.h  math.cc  math.h  twiddle.h
src/pkmalloc/: BUILD  allocated_block.cc  allocated_block.h  block.cc  block.h  free_block.cc  free_block.h  free_list.cc  free_list.h  global_state.cc  global_state.h  heap_check.cc  heap_check.h  malloc_assert.h  metadata.cc  metadata.h  pkmalloc.cc  pkmalloc.h
traces/: BUILD  bdd-aa32.trace  bdd-aa4.trace  bdd-ma4.trace  bdd-nq7.trace  cbit-abs.trace  cbit-parity.trace  cbit-satadd.trace  cbit-xyz.trace  compression.bzl  firefox.trace  four-in-a-row.trace  grep.trace  haskell-web-server.trace  mc_server.trace  mc_server_large.trace  mc_server_small.trace  ngram-fox1.trace  ngram-gulliver1.trace  ngram-gulliver2.trace  ngram-moby1.trace  ngram-shake1.trace  onoro-cc.trace  onoro.trace  py-catan-ai.trace  py-euler-nayuki.trace  scp.trace  server.trace  simple.trace  simple_calloc.trace  simple_realloc.trace  solitaire.trace  ssh.trace  syn-array-short.trace  syn-array.trace  syn-mix-realloc.trace  syn-mix-short.trace  syn-mix.trace  syn-string-short.trace  syn-string.trace  (+6 more)
writeup/: writeup.tex
