"Correctness and performance benchmarking suite for malloc implementations"

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "toolchains_llvm", version = "v1.1.2")
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.4",
)

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "cd047b3c64fd4574642535a7108d5d998eefa923",
    remote = "https://github.com/ClaytonKnittel/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "cc-util")
git_override(
    module_name = "cc-util",
    commit = "8d30220aa7012e1bbd0ca0191e4c918f3a17f9b4",
    remote = "https://github.com/ClaytonKnittel/cc-util.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_python", version = "0.36.0")
