"Correctness and performance benchmarking suite for malloc implementations"

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "cd047b3c64fd4574642535a7108d5d998eefa923",
    remote = "https://github.com/ClaytonKnittel/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "cc-util")
git_override(
    module_name = "cc-util",
    commit = "bbd3f78ed7e1a441f6ae886667bd0316f541173f",
    remote = "https://github.com/ClaytonKnittel/cc-util.git",
)

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz",
    strip_prefix = "rules_boost-master",
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    # integrity = "sha256-...",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_python", version = "0.36.0")
